@@ -1,12 +1,15 @@
 === Version X.X.X (XX-XXX-2014) ===
 
 * Sets default currency of currency formatter to USD.
-* Horizontal axis tick labels anchored at the middle by default
+* Horizontal axis tick labels anchored at the middle by default.
 * Fix issue where chart titles were not within the chart SVG bounds.
 * Merges common functionality in ScatterSeries and BubbleSeries into a common PointSeries.
 * Deprecated “ScatterSeries.pointRadius”. Use “ScatterSeries.radiusFunction” instead.
 * Fix issue where the calculated charts margins were too large.
 * Fix issue where tickmarks were obscured in bottom/right axis orientation.
+* Allow programmatic filtering of a ChartGroup;
+  * ChartGroup.filterByGrouping - allows a given grouping to be filtered by a given value.
+  * ChartGroup.clearFilters - allows all previously applied filters to be removed.
 
 
 
